--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,15 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>之家</title>
+<!--    <link rel="icon" href="<%= BASE_URL %>favicon.ico">-->
+    <link rel="icon" href="//www.ooo0o.com/images/yi.png">
+    <title>鲁-沂</title>
+    <style>
+      /*站长统计dom隐藏*/
+      #cnzz_stat_icon_1268199294{
+        display: none;
+      }
+    </style>
   </head>
   <body>
     <noscript>
@@ -13,5 +20,11 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+
+
+
+
+    <!-- 站长统计代码 -->
+    <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1268199294'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s13.cnzz.com/z_stat.php%3Fid%3D1268199294' type='text/javascript'%3E%3C/script%3E"));</script>
   </body>
 </html>
