--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <!--    <link rel="icon" href="<%= BASE_URL %>favicon.ico">-->
     <link rel="icon" href="//www.ooo0o.com/images/yi.png">
-    <title>鲁-沂</title>
+    <title>__小庞__</title>
     <style>
       /*站长统计dom隐藏*/
       #cnzz_stat_icon_1268199294{
