--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,6 @@
 
 
     <!-- 站长统计代码 -->
-    <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1268199294'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s13.cnzz.com/z_stat.php%3Fid%3D1268199294' type='text/javascript'%3E%3C/script%3E"));</script>
+<!--    <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1268199294'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s13.cnzz.com/z_stat.php%3Fid%3D1268199294' type='text/javascript'%3E%3C/script%3E"));</script>-->
   </body>
 </html>
